<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:clickable="true">

    <include
        layout="@layout/inflate_app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/second_question"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10"
            android:paddingTop="@dimen/dimen_10">

            <RadioButton
                android:id="@+id/rd_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option1" />

            <RadioButton
                android:id="@+id/rd_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option2" />

            <RadioButton
                android:id="@+id/rd_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option3" />

            <RadioButton
                android:id="@+id/rd_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option4" />

        </RadioGroup>

        <include
            layout="@layout/inflate_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_lay"></include>

    </LinearLayout>

</RelativeLayout>