<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_margin"
    android:background="@color/colorwhite">

    <include
        layout="@layout/inflate_app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_margin"
        card_view:cardCornerRadius="@dimen/card_radius"
        card_view:contentPadding="@dimen/dimen_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10">

            <TextView
                android:id="@+id/first_ans_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_5"
                android:text="Hello"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/color_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_5"
                android:text="@string/second_question"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/color_black" />

            <TextView
                android:id="@+id/second_ans_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_5"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/color_black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_5"
                android:text="@string/third_question"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/color_black" />

            <TextView
                android:id="@+id/third_ans_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_5"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/color_black"
                android:textStyle="bold" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view"
        android:layout_margin="@dimen/dimen_10"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/finish_btn"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_username"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dimen_10"
            android:background="@drawable/btn_selector"
            android:text="@string/labl_finish"
            android:textColor="@color/colorwhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/history_btn"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_username"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dimen_10"
            android:background="@drawable/btn_selector"
            android:enabled="false"
            android:text="@string/lbl_history"
            android:textColor="@color/colorwhite"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>